--- a/html/scss/_index.scss
+++ b/html/scss/_index.scss
@@ -1206,7 +1206,7 @@ section {
             }
         }
     }
-
+    // 最新課程
     &.class {
         .slider_wrap {
             position: relative;
@@ -1471,6 +1471,85 @@ section {
                 right: 0px;
             }
 
+        }
+    }
+    &.department {
+        .slider_wrap {
+            padding-left: 70px;
+            padding-right: 70px;
+        }
+        .slider {
+            margin-left: -15px;
+            margin-right: -15px;
+            line-height: 0;
+            .slider__item {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+        
+                a {
+                    display: block;
+                }
+                .img_box {
+                    padding-bottom: 33.33%;
+                }
+            }
+        }
+        .slick-prev {
+            left: -50px;
+            z-index: 1;
+            &::before {
+                position: absolute;
+                top: 50%;
+                right: 50%;
+                transform: translate(50%, -50%);
+                background: center / contain no-repeat url(../img/icon/angle_left_blue.png);
+            }
+        }
+        .slick-next {
+            right: -50px;
+            z-index: 1;
+            &::before {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background: center / contain no-repeat url(../img/icon/angle_right_blue.png);
+            }
+        }
+        .slick-arrow {
+            @include size(50px, 50px);
+            &::before {
+                content: "";
+                font-family: "Font Awesome Kit";
+                @include size(19px, 33px);
+            }
+            &:focus {
+                outline-width: 1px;
+                outline-style: solid;
+                outline-color: #e66d00;
+            }
+            @include media-breakpoint-up(md) {
+                &:hover {
+                    background-color: rgba(0, 0, 0, .05);
+                }
+            }
+        }
+        @include media-breakpoint-down(md) {
+            .slider_wrap {
+                padding-left: 40px;
+                padding-right: 40px;
+            }
+            .slick-prev {
+                left: -40px;
+            }
+            .slick-next {
+                right: -40px;
+            }
+            .slick-arrow {
+                @include size(36px, 36px);
+
+            }
         }
     }
 }
