--- a/html/scss/_part.scss
+++ b/html/scss/_part.scss
@@ -1,3 +1,14 @@
+.img_box {
+    width: 100%;
+    height: 0;
+    padding-bottom: 50%;
+    position: relative;
+    img {
+        width: 100%;
+        @include center;
+    }
+}
+
 .slider__to_detail {
     width: fit-content;
     padding: 4px 21px;
